# brainybuddy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PRD.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml
.agents/reviews/: phase-0-foundations.md  phase-1-mvp-backend.md  phase-1f-mvp-frontend.md  phase-2-reality-adaptation.md  phase-3-ingestion.md  phase-4-intelligence.md  phase-5-collaboration.md  phase-6-integrations.md  phase-7-mobile.md  phase-8-premium-tutor.md
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 464295eaeea9_initial_schema.py  a1b2c3d4e5f6_add_supabase_id_drop_google_id.py
app/: main.py
app/api/: auth.py  availability.py  chat.py  collab.py  courses.py  energy.py  health.py  insights.py  integrations.py  materials.py  schedule.py  sync.py  tags.py  tasks.py  time_logs.py  tutor.py  what_if.py
app/core/: config.py  database.py  deps.py  logging.py  middleware.py  security.py
app/models/: __init__.py  availability.py  calendar_binding.py  chat.py  course.py  insight.py  material.py  plan_version.py  sharing_rule.py  study_block.py  tag.py  task.py  time_log.py  user.py
app/schemas/: auth.py  availability.py  chat.py  course.py  material.py  pagination.py  schedule.py  tag.py  task.py  time_log.py
app/services/: availability_service.py  course_service.py  estimation_learning.py  insights_service.py  plan_versioning.py  schedule_service.py  (+3 more)
frontend/: .env.local.example  package-lock.json  package.json
mobile/: app.json  package.json  tsconfig.json
tests/: conftest.py
(+73 files in other folders)
